--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+
+@source "./index.html";
+@source "./src/**/*.{ts,js}";
+@source "./config/**/*.{json,js,ts}";
 
 html {
   --s: 84px; /* control the size*/
